partially fixed labels overlap

--- a/public.devel/app/styles/application.scss
+++ b/public.devel/app/styles/application.scss
@@ -19,6 +19,7 @@ $label-width: 100px;
   position:absolute;
   top:-100px;
   left:-100px;
+  word-wrap: break-word;
 }
 
 .martop2 {
@@ -97,6 +98,7 @@ pre {padding: 5px; margin: 5px;background-color:#f5f5f5; }
   /*font-size: 12px !important;*/
   padding-top:0 !important;
   /*line-height: 14px;*/
+  word-wrap: break-word;
   background-color:#eee;
 }
 #update, #restore {
